Fixed spacing

--- a/lesson03/styles/base.css
+++ b/lesson03/styles/base.css
@@ -7,6 +7,7 @@ header {
     display: grid;
     grid-template-columns: 1fr 1fr;
     background-color: #89B08D;
+    padding-left: 10px;
 }
 
 h2 {
@@ -56,4 +57,8 @@ a:link, a:visited {
     grid-column: 1/-1;
     border: 1px solid black;
     border-radius: .5rem;
+}
+
+#purpose-para {
+    padding-left: 20px;
 }
